# TeachShare

./: .gitignore  .project  README.md  blah.txt  code  describe_nginx.yml  docker-compose.production.yml  docker-compose.yml  file.py  package-lock.json  requirements.txt  test  workspace.code-workspace
CacheService/cache-service/: .env  .gitignore  Cargo.toml  test.md
CacheService/cache-service/rls/: .rustc_info.json
CacheService/cache-service/rls/debug/.fingerprint/aho-corasick-63d9cff65ad2cb58/: lib-aho_corasick-63d9cff65ad2cb58  lib-aho_corasick-63d9cff65ad2cb58.json
CacheService/cache-service/rls/debug/.fingerprint/arrayvec-c4b1d34205c3ff14/: lib-arrayvec-c4b1d34205c3ff14  lib-arrayvec-c4b1d34205c3ff14.json
CacheService/cache-service/rls/debug/.fingerprint/bitflags-64a28876ab6c30b9/: lib-bitflags-64a28876ab6c30b9  lib-bitflags-64a28876ab6c30b9.json
CacheService/cache-service/rls/debug/.fingerprint/byteorder-01c591e96ca84ce1/: lib-byteorder-01c591e96ca84ce1  lib-byteorder-01c591e96ca84ce1.json
CacheService/cache-service/rls/debug/.fingerprint/bytes-b687feeed2768a1d/: lib-bytes-b687feeed2768a1d  lib-bytes-b687feeed2768a1d.json
CacheService/cache-service/src/: cache.rs  db.rs  main.rs  models.rs  models_diesel.rs  pool.rs  schema.rs  treiber_stack.rs  users.rs
Frontend/: Dockerfile  package-lock.json  package.json
Rust_ws/: Cargo.toml  filesys.json
Rust_ws/src/: actor.rs  client.rs  main.rs  server.rs
TeachShare_WebApp/cache/websockets/: Cargo.toml
TeachShare_WebApp/cache/websockets/src/: .env  main.rs
TeachShare_WebApp/cache/websockets/src/data/: db.rs  mod.rs
(+774 files in other folders)
