[package]
name = "ws"
version = "0.1.0"
authors = ["Gabe H <ghartman@ucsc.edu>"]

[[bin]]
name="client"
path="src/client.rs"

[[bin]]
name="server"
path="src/server.rs"

[[bin]]
name="main"
path="src/main.rs"

[[bin]]
name="actors"
path="src/actor.rs"

[dependencies]
ws = "*"
actix = "0.5"
futures = "0.2.1"