[package]
name = "cache-service"
version = "0.1.0"
authors = ["bryan <bmccoid@ucsc.edu>"]

[dependencies]
ws = "*"
actix = "0.5"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
crossbeam-channel = "0.1"
diesel = { version = "1.0.0", features = ["postgres", "serde_json", "chrono"] }
dotenv = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
time = "*"
log = "0.4"
pretty_env_logger = "0.2"