[package]
name = "websockets"
version = "0.1.0"
authors = ["bryan <bmccoid@ucsc.edu>"]




[dependencies]
actix = "0.5"
actix-web = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version  = "1.2.2", features= ["postgres"]} # http://diesel.rs/guides/getting-started/ to setup
dotenv = "0.9.0"
